--- a/taskman/src/main/resources/templates/index.html
+++ b/taskman/src/main/resources/templates/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>Bark: task list</title>
-    <link href="/app/resources/css/app.css" rel="stylesheet">
+    <link href="../static/css/app.css" rel="stylesheet">
 </head>
 <body>
     <center><p>Bark - task manager</p></center>
     <br>
     <center>
         <a th:href="@{/tasks/list}">Task list</a>
-        <br>
+        <br><br>
         <a th:href="@{/tasks/new}">Add new task</a>
     </center>
 </body>
